[gd_scene load_steps=2 format=3 uid="uid://tmc2hocedu0l"]

[ext_resource type="Script" path="res://Game/Scenes/Screens/EndLevel/end_level.gd" id="1_qn7so"]

[node name="EndLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qn7so")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LevelComplete" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Level Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeCompleted" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Time Completed in:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountTime" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetsHit" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Total Targets Hit:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountTargets" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rating" type="Label" parent="CenterContainer/MenuContainer"]
visible = false
layout_mode = 2
text = "Rating:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountRating" type="Label" parent="CenterContainer/MenuContainer"]
visible = false
layout_mode = 2
text = "1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperation" type="Control" parent="CenterContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 92.53)
layout_mode = 2

[node name="PlayAgain" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Play Again"

[node name="Continue" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Continue"

[node name="Menu" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="CenterContainer/MenuContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/MenuContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/MenuContainer/Menu" to="." method="_on_menu_pressed"]
